--- a/style.css
+++ b/style.css
@@ -399,5 +399,537 @@ display: flex;
 
 }
 .contact-btn{
+justify-content: center;
+    display: flex;
+    height: 54px;
+    width: 100%;
+    font-size: 1rem;
+    float: right;
+    color: #fff;
+    background-color: crimson;
+    border: 2px solid crimson;
+    padding: 10px 40px;
+    border-radius: 5px;
+    margin-top: 30px;
+    text-transform: uppercase;
+    text-align: center; 
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 30%;
+    height: 250px;
+    border: 1px solid #424242;
+    perspective: 1000px;
+    border-radius: 5px;
+    display: flex;
+    margin-right:5%;
+}
+.flip-card:nth-child(3){
+    background-color: transparent;
+    width: 30%;
+    height: 250px;
+    border: 1px solid #424242;
+    perspective: 1000px;
+    border-radius: 5px;
+    display: flex;
+    margin-right:0;
+}
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #424242;
+  color: crimson;
+}
+.flip-card-front h1{
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%,-0);
+    font-size:1rem !important;
+}
+
+/* Style the back side */
+.flip-card-back {
+    background-color: #424242;
+    color: #ffffff;
+    transform: rotateY(180deg);
+    padding: 50px;
+    text-align: justify;
+    font-size: 12px;
+    font-weight: 700;
+
+}
+
+
+/* End Hero Section */
+#contacthero {  
+  background-image: url(https://wallpaperaccess.com/full/2901843.png);
+	background-size: cover;
+	background-position: top center;
+	position: relative;
+	z-index: 1;
+  overflow-y: auto;
+}
+
+#contacthero::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+	opacity: 0.7;
+	z-index: -1;
+}
+
+  #contacthero .contacthero {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 50px;
+}
+  #registrationhero {  
+  background-image: url(https://wallpaperaccess.com/full/2901843.png);
+	background-size: cover;
+	background-position: top center;
+	position: relative;
+	z-index: 1;
+    height: 1080px;
+  overflow-y: auto;
+}
+#registrationhero::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 1080px;
+	width: 100%;
+	background-color: black;
+	opacity: 0.7;
+	z-index: -1;
+}
+
+  #registrationhero .registrationhero {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 50px;
+}
+  #registrationhero  .registrationhero{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+.formbackground{
+  position: relative;
+    padding: 35px 20px 40px;
+    left: 50%;
+    top: 50%;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 430px;
+    background: #d1c8c914;
+    min-height: 400px;
+}
+    .contactformside{
+    width: 40%;
+    background-color: #06004205;
+    position: relative;
     justify-content: center;
-    display: flex;}
+    display: flex;
+    font-size: 24px;
+    line-height: 2rem;
+    align-items: center;
+}
+  .contactformside .details{
+    padding: 30px;
+    font-weight: 700;
+    font-size: 16px;
+}
+    .contactformside .details p{
+
+    font-weight: 500;
+    font-size: 16px;
+}
+  .contactformbackground{
+    width: 60%;
+    background: #d1c8c914;
+    min-height: 500px;
+}
+
+  .regformbackground{
+  position: relative;
+    padding: 35px 20px 40px;
+    left: 50%;
+    top: 80%;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+    width: 90%;
+    max-width: 430px;
+    background: #d1c8c914;
+    min-height: 700px;
+}
+.formbackground .sign-title {
+    text-align: center;
+    padding: 0 0 10px;
+}
+  .regformbackground .sign-title {
+    text-align: center;
+    padding: 0 0 10px;
+}
+  .contactformbackground .sign-title {
+    text-align: center;
+    padding: 0 0 10px;
+}
+.sign-form {
+    padding: 0 20px;
+  width:100%;
+  margin: 40px 0;
+}
+  .sign-form .row{
+    width: 100%;
+    position: relative;
+    display: flex;
+    height: 100px;
+  }
+  .contact-form {
+    padding: 10% 12%;
+}
+
+.sign-title {
+    color: crimson;
+    padding: 0 0 20px;
+    font-size: 20px;
+    font-weight: 600;
+}
+.sign-form .form-group {
+  margin-bottom: 1rem;
+    width: 45%;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
+}
+  .form-group {
+  margin-bottom: 1rem;
+}
+  .full-form-group {
+  margin-bottom: 1rem;
+    width: 90%;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
+}
+label {
+    display: block;
+    padding: 0 0 4px;
+    margin: 0;
+    font-weight: 600;
+    font-size: 13px;
+    color: #fff;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: 38px !important;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    color: #2c292a;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+      input:focus, textarea:focus, select:focus{
+        outline: 2px solid #eee8e8;
+    }
+        input:invalid:focus, textarea:focus:invalid,select:focus:invalid{
+        outline: 2px solid #eee8e8;
+          background: #fff;
+    }
+/*     input:invalid:placeholder-shown,textarea:invalid:placeholder-shown {
+        outline: none !important;
+          background: #fff !important;
+}
+  input:invalid,textarea:invalid {
+outline: 1px solid red;
+    background: #efbdc7cc;
+} */
+
+
+input:valid {
+  outline: none;
+  box-shadow:none;
+}
+
+.form-control-textarea{
+      display: block;
+    width: 100%;
+    height: 100px !important;
+    padding: 0.375rem 0.75rem;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2c292a;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  
+}
+
+  .form-row>.col{
+    width:100%
+
+}
+.btn_crimson {
+background: crimson;
+    color: #fff;
+    display: block;
+    border: none;
+    height: 40px;
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 6px;
+    margin-top: 40px;
+    text-align: center;
+    padding: 10px;
+  width: 100%;
+}
+  .sign-form .btn_crimson {
+background: crimson;
+    color: #fff;
+    display: block;
+    border: none;
+    height: 40px;
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 6px;
+    margin-top: 40px;
+    text-align: center;
+    padding: 10px;
+  width: 95%;
+}
+  .btn_side {
+    background: #706b6c;
+    color: #fff;
+    display: block;
+    border: none;
+    height: 40px;
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 6px;
+    margin-top: 20px;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+}
+    .reset-account {
+    font-size: .8rem;
+    text-align: left;
+    color: #fff;
+    margin: 0 0 0;
+}
+.reset-account a,.new-account a{
+  color:crimson;
+  font-weight:600;
+  
+}
+  .new-account {
+    font-size:.8rem;
+    text-align: center;
+    color: #fff;
+    margin: 0 0 0;
+}
+
+#login-main {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    max-height: 750px;
+    min-height: 200px;
+    margin: -35px 0 0 -35px;
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%,-50%);
+}
+  .circle{
+    background: #706b6c;
+    color: #ffffff;
+    padding: 5px;
+    border-radius: 50%;
+    display: flex;
+    justify-content:center;
+    height: 60px;
+    width: 60px;
+    left: 37.5%;
+    margin: 0 auto;
+    position: absolute;
+    top: 40%;
+  }
+
+
+/* Footer */
+#footer {
+	background-color: #424242;
+}
+#footer .footer {
+	min-height: 200px;
+	flex-direction: column;
+	padding-top: 50px;
+	padding-bottom: 10px;
+}
+#footer h2 {
+	color: white;
+	font-weight: 500;
+	font-size: 1rem;
+	letter-spacing: 0.1rem;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+#footer .social-icon {
+	display: flex;
+	margin-bottom: 30px;
+}
+#footer .social-item {
+	height: 50px;
+	width: 50px;
+	margin: 0 5px;
+}
+#footer .social-item img {
+	filter: grayscale(1);
+	transition: 0.3s ease filter;
+}
+#footer .social-item:hover img {
+	filter: grayscale(0);
+}
+#footer p {
+	color: white;
+	font-size: 1rem;
+}
+/* End Footer */
+
+
+
+
+
+
+
+
+
+
+/* Keyframes */
+@keyframes hamburger_puls {
+	0% {
+		opacity: 1;
+		transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		transform: scale(1.4);
+	}
+}
+@keyframes text_reveal_box {
+	50% {
+		width: 100%;
+		left: 0;
+	}
+	100% {
+		width: 0;
+		left: 100%;
+	}
+}
+@keyframes text_reveal {
+	100% {
+		color: white;
+	}
+}
+@keyframes text_reveal_name {
+	100% {
+		color: crimson;
+		font-weight: 500;
+	}
+}
+/* End Keyframes */
+
+
+
+/* Keyframes */
+@keyframes hamburger_puls {
+	0% {
+		opacity: 1;
+		transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		transform: scale(1.4);
+	}
+}
+@keyframes text_reveal_box {
+	50% {
+		width: 100%;
+		left: 0;
+	}
+	100% {
+		width: 0;
+		left: 100%;
+	}
+}
+@keyframes text_reveal {
+	100% {
+		color: white;
+	}
+}
+@keyframes button_reveal {
+	100% {
+		color: white;
+    border: 2px solid crimson;
+	}
+}
+@keyframes text_reveal_name {
+	100% {
+		color: crimson;
+		font-weight: 500;
+	}
+}
+/* End Keyframes */
+
+
+/* Media Query For Tablet */
+@media only screen and (min-width: 768px) {
+	.cta {
+		font-size: 1.5rem;
+		padding: 10px 30px;
+	}
+	h1.section-title {
+		font-size: 2rem;
+	}
+
+	/* Hero */
+	#hero h1 {
+		font-size: 1.5rem;
+	}
+	/* End Hero */
+}
